--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ body {
 }
 
 .tile {
+    --x: 1;
+    --y: 2;
+    --background-lightness: 80%;
+    --text-lightness: 20%;
     position:absolute;
     display: flex;
     justify-content: center;
@@ -41,4 +45,18 @@ body {
     width: var(--cell-size);
     background-color: green;
     border-radius: 1vmin;
+    top: calc(var(--y) * (var(--cell-size) * var(--cell-gap)) * var(--cell-gap));
+    left: calc(var(--x) * (var(--cell-size) * var(--cell-gap)) * var(--cell-gap));
+    font-weight: bold;
+    background-color: hsl(200, 50%, var(--background-lightness));
+    color: hsl(200, 25%, var(--text-lightness));
+    animation: show 200ms ease-in-out;
+    transition: 100ms ease-in-out;
+}
+
+@keyframes show {
+    0% {
+        opacity: .5;
+        transform: scale(0);
+    }
 }
